<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/listitem_selector"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="64dp"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/librarychilditem_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/librarychilditem_lenght"
        android:singleLine="true"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/librarychilditem_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/librarychilditem_title"
        android:layout_alignRight="@+id/librarychilditem_title"
        android:layout_below="@+id/librarychilditem_title"
        android:singleLine="true"
        android:text="@string/artist"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/librarychilditem_lenght"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/librarychilditem_title"
        android:layout_alignBottom="@+id/librarychilditem_title"
        android:layout_alignParentRight="true"
        android:singleLine="true"
        android:text="@string/lenght"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>